Updated graph for responsiveness.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
 <body>
 
+<div class="subhead">
+  <h2>How many of North Carolina's lateral entry teachers stay in the classroom compared to traditionally trained teachers?</h2>
+</div>
 <div id="chart"></div>
 
 
